2019-04-24  Florian Weimer  <fweimer@redhat.com>

	Also enable BIND_NOW for programs if --enable-bind-now.
	* Makeconfig [$(bind-now)] (link-extra-flags): Add -Wl,-z,now.
	(+link-pie): Use $(link-extra-flags).
	(+link-static): Likewise.
	[! $(build-pie-default)] (+link): Likewise.
	* manual/install.texi (Configuring and compiling): Update
	--enable-bind-now description.
	* INSTALL: Regenerated.

2019-04-24  Mike Frysinger  <vapier@gentoo.org>

	[BZ #18465]
	* malloc/Makefile (others): Add memusagestat.
	($(objpfx)memusagestat): Delete rule.
	(LDLIBS-memusagestat): New variable.

2019-04-24  Florian Weimer  <fweimer@redhat.com>

	* locale/Makefile (tests-special): Guard setting by
	$(run-built-tests) == yes, otherwise tst-locale-locpath attempts
	to run while cross-compiling.

2019-04-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #18035]
	* elf/Makefile (tests-container): Add tst-pldd.
	* elf/pldd-xx.c: Use _Static_assert in of pldd_assert.
	(E(find_maps)): Avoid use alloca, use default read file operations
	instead of explicit LFS names, and fix infinite loop.
	* elf/pldd.c: Explicit set _FILE_OFFSET_BITS, cleanup headers.
	(get_process_info): Use _Static_assert instead of assert, use default
	directory operations instead of explicit LFS names, and free some
	leadek pointers.
	* elf/tst-pldd.c: New file.

2019-04-23  H.J. Lu  <hongjiu.lu@intel.com>

	* malloc/arena.c (do_set_mallopt_check): Removed.

2019-04-23  Florian Weimer  <fweimer@redhat.com>

	locale: Add LOCPATH diagnostics to the locale program.
	* locale/programs/locale.c (setlocale_failed): New variable.
	(try_setlocale): New function.
	(quote_string): Likewise.
	(setlocale_diagnostics): Likewise.
	(main): Call try_setlocale instead of setlocale.  Call
	setlocale_diagnostics.
	* locale/Makefile (tests-special): Add tst-locale-locpath.out.
	(tst-locale-locpath.out): New target.
	* locale/tst-locale-locpath.sh: New file.

2019-04-21  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
